# madlang

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  .weeder.yaml  .yamllint  CONTRIBUTING.md  Justfile  README.md  Setup.hs  TODO.md  appveyor.yml  cabal.project.local  default.nix  madlang.cabal  madlibs.cabal  stack-8.yaml  stack-nightly.yaml  stack.yaml  test.mad
app/: Main.hs
bash/: cross  demo  install.sh  mkCompletions
bench/: Bench.hs  magical-realism.mad
demo/: bi-update.mad  example.mad  releases.mad  shakespeare.mad
docs/: madlang.tex
man/: MANPAGE.md  madlang.1
src/Madlibs/Ana/: .Parse.hs.swp  Parse.hs
src/Madlibs/Cata/: Run.hs
src/Madlibs/Exec/: .Main.hs.swp  Main.hs
src/Madlibs/Internal/: .Types.hs.swp  Types.hs  Utils.hs
src/Text/: Madlibs.hs
src/Text/Madlibs/Ana/: Parse.hs  ParseUtils.hs  Resolve.hs
src/Text/Madlibs/Cata/: Display.hs  Run.hs  SemErr.hs
src/Text/Madlibs/Exec/: Helpers.hs  Main.hs
src/Text/Madlibs/Generate/: Build.hs  TH.hs
src/Text/Madlibs/Internal/: Types.hs  Utils.hs
src/Text/Madlibs/Packaging/: Fetch.hs
test/: Demo.hs  Spec.hs
test/templates/: .test.mad.swp  cat.mad  fortune-teller.mad  gambling.mad  include-recursive.mad  include.mad  include2.mad  lib.mad  modifiers.mad  ordered.mad  test.mad  var.mad  ཤོ.mad
test/templates/err/: bad-modifier.mad  bad-sum.mad  bad.mad  circular.mad  double-declarations.mad  sem-err.mad
tutorials/: EDSL.md
