name:                madlibs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/vmchale/madlibs#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           Copyright: (c) 2016 Vanessa McHale
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Madlibs.Exec.Main
                     , Madlibs.Cata.Run
  other-modules:       Madlibs.Internal.Utils
                     , Madlibs.Ana.Parse
                     , Madlibs.Internal.Types
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , text
                     , optparse-generic
                     , mwc-random
                     , lens
                     , mtl
                     , composition
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , DeriveGeneric
                     , DeriveFunctor
                     , DeriveAnyClass

executable madlibs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , madlibs
  default-language:    Haskell2010

test-suite madlibs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , madlibs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/madlibs
